# masters-thesis

./: .gitignore  README.md  pyproject.toml  results.ipynb
data/classification_results/: final_comparison_table.csv
data/classification_results/nested_cv/: comparison_table.csv
data/classification_results/nested_cv/linear_svm/mofa_trained_lg2/: summary_across_seeds.csv
data/classification_results/nested_cv/linear_svm/mofa_trained_lg2_fs/: summary_across_seeds.csv
data/classification_results/nested_cv/linear_svm/mofa_trained_vsn/: summary_across_seeds.csv
data/classification_results/train_test_split/: comparison_table.csv
notebooks/downstream/: biomarker_discovery.ipynb  biomarker_discovery_mofa_linearsvm.ipynb  biomarker_discovery_mofa_rforest.ipynb  subtype_classification.ipynb  subtype_classification_nested_cv.ipynb  subtype_classification_results_interpretation.ipynb  subtype_classification_train_test_split.ipynb
notebooks/exploratory_analysis/: exploratory_analysis.ipynb
notebooks/models/: getting_started_mofa_python.ipynb  getting_started_pbmc10k.ipynb  mofa2.ipynb  mofa_train.ipynb
notebooks/preprocessing/: preprocessing copy 2.ipynb  preprocessing.ipynb
src/: biomarker_discovery_linear_svm_nested_cv.py  biomarker_discovery_linear_svm_train_test_split.py  mofa_train.py  subtype_classification.py  subtype_classification_common.py  subtype_classification_nested_cv.py  subtype_classification_train_test_split.py
src/data_acquisition/: annotations_acquisition.R  clinical_data_acquisition.R  omics_data_acquisition.R
(+13 files in other folders)
